src/components/button/Button.module.css
.btn {
  padding: 0.5rem;
  background: #f4f4f4;
  border: 1px solid #323330;
  color: #323330;
  transition: 0.3s ease-in-out;
}
.btn:hover,
.btn:active {
  background: white;
}
.btn:hover {
  box-shadow: 0px 0px 5px 1px rgb(50, 51, 48, 0.1);
}
.btn:active {
  box-shadow: inset 0px 0px 5px 1px rgb(50, 51, 48, 0.1);
}
/* button variant */
.btn.primary {
  background: #24a0ed;
  border: 1px solid #24a0ed;
  color: white;
}
.btn.secondary {
  background: white;
  border: 1px solid #24a0ed;
  color: #24a0ed;
}
.btn.ghost {
  border: 1px solid #f4f4f4;
  color: gray;
}
/* button size */
.btn.full {
  width: 100%;
  font-size: 1rem;
}
.btn.wide {
  width: 66.66%;
  font-size: 1rem;
}
.btn.large {
  width: 10rem;
  font-size: 1rem;
}
.btn.medium {
  width: 8rem;
  font-size: 0.8rem;
}
.btn.small {
  width: 6rem;
  font-size: 0.7rem;
}
/* rounded button */
.btn.rounded {
  border-radius: 0.4rem;
}
/* active button */
.btn.active {
  font-weight: 600;
}
/* disabled button */
.btn.disabled {
  background: white;
  border: solid 0.5px lightgray;
  color: lightgray;
  cursor: not-allowed;
  box-shadow: none;
}

